--- a/Customized Solutions.html
+++ b/Customized Solutions.html
@@ -353,7 +353,7 @@ p.list{
       <div class="row ">
           <div class="col-lg-6">
               <div class="welcome_img"> 
-                  <img class="w-100" src="images/b3.jpg" alt=""> 
+                  <img class="w-100" src="images/custom1.PNG" alt=""> 
               </div>
           </div>
           <div class="col-lg-6 welcome_content_aera ">
@@ -384,7 +384,7 @@ p.list{
 
           <div class="col-lg-6">
              <div class="welcome_img"> 
-              <img class="w-100" src="images/b4.jpg" alt=""> 
+              <img class="w-100" src="images/custom2.PNG" alt=""> 
              </div>
           </div>
       </div>
