--- a/oilfield.html
+++ b/oilfield.html
@@ -374,7 +374,7 @@ ol.filters{
                 <div class="row d-flex justify-content-between">
                   
                   <input type="radio" id="All" name="categories" value="All" checked>
-                  <input type="radio" id="Petroleum" name="categories" value="Petroleum" checked>
+                  <input type="radio" id="Petroleum" name="categories" value="Petroleum" >
                   <input type="radio" id="GasProcessing" name="categories" value="GasProcessing">
                   <input type="radio" id="OilandGasPipeline" name="categories" value="OilandGasPipeline">
                   <input type="radio" id="MaintenanceCleaning" name="categories" value="MaintenanceCleaning">
