--- a/Solvents.html
+++ b/Solvents.html
@@ -296,11 +296,11 @@ ol.filters{
                         </div>
                     </div>
                     <ul class="header_social mb-3 col-md-4 col-sm-6">
-                        <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="https://www.instagram.com/gscegy/"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
-                    </ul>
+                      <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
+                  </ul>
                 </div> 
             </div>
         </div> 
@@ -714,11 +714,11 @@ ol.filters{
                     <a href="index.html"><img class="w-30" src="images/GSC.png" alt=""></a> 
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
                     <ul class="footer_social"> 
-                        <li><a href="https://www.facebook.com/GSCEGY"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="https://www.instagram.com/gscegy/"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
-                    </ul>
+                      <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
+                  </ul>
                 </div>
                 <div class="footer_widget col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                     <h4>GSC</h4>
