--- a/Household.html
+++ b/Household.html
@@ -78,8 +78,8 @@
                     </div>
                     <ul class="header_social mb-3 col-md-4 col-sm-6">
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="https://www.instagram.com/gscegy/"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
                     </ul>
                 </div> 
@@ -342,9 +342,9 @@
                     <a href="index.html"><img class="w-30" src="images/GSC.png" alt=""></a> 
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
                     <ul class="footer_social"> 
-                        <li><a href="https://www.facebook.com/GSCEGY"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="https://www.instagram.com/gscegy/"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
                     </ul>
                 </div>
