--- a/Customized Solutions.html
+++ b/Customized Solutions.html
@@ -22,7 +22,7 @@
         :root {
       --black: #3a3a3a;
       --white: #fff;
-      --blue: #3D8BF2;
+      --blue: #27538C;
     }
     
     
@@ -307,8 +307,8 @@ p.list{
                                  <ul class="dropdown-menu">
                                      <li class="dropdown"><a class="dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
                                          <ul class="dropdown-menu">
+                                           <li><a class="dropdown-item" href="Household.html">Household Detergents</a></li>
                                              <li><a class="dropdown-item" href="Industrialdetergents.html">Industrial Detergents</a></li>
-                                             <li><a class="dropdown-item" href="Household.html">Household Detergents</a></li>
                                          </ul>    
                                      </li> 
                                      <li><a class="nav-link" href="Solvents.html">Solvents</a>
