--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                                 <ul class="dropdown-menu">
                                     <li class="dropdown"><a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents </a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="Industrialdetergents.html">Industrial Detergents</a></li>
                                             <li><a class="dropdown-item" href="Household.html">Household Detergents</a></li>
+                                            <li><a class="dropdown-item" href="Industrialdetergents.html">Industrial Detergents</a></li>
                                         </ul>    
                                     </li> 
                                     <li><a class="nav-link" href="Solvents.html">Solvents</a>
@@ -501,8 +501,8 @@
                 <div class="footer_widget fw_3 col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.9s">
                     <h4> Detergents</h4>  
                     <ul class="footer_nav">     
+                        <li><a href="Household.html">Household Detergents</a></li>   
                         <li><a href="Industrialdetergents.html">Industrial Detergents</a></li>   
-                        <li><a href="industries-2.html">Household Detergents</a></li>   
                     </ul>
                 </div>  
                 <div class="footer_widget fw_2 col-lg-2 col-sm-6 wow fadeIn" data-wow-delay="0.6s">
