--- a/Solvents.html
+++ b/Solvents.html
@@ -215,7 +215,7 @@
 }
     .parent P{
     font-size: 1.3rem;
-    text-align: center;
+    text-align: start;
     margin-bottom: 1rem;
     font-weight: 600;
 }
