--- a/oilfield.html
+++ b/oilfield.html
@@ -213,7 +213,7 @@
 }
     .parent P{
     font-size: 1.3rem;
-    text-align: center;
+    text-align: start;
     margin-bottom: 1rem;
     font-weight: 600;
 }
