--- a/contact.html
+++ b/contact.html
@@ -159,9 +159,9 @@
                         <div class="form-group col-md-6">
                             <input type="email" class="form-control" id="email" name="email" placeholder="Your Email *">
                         </div>
-                        <div class="form-group col-12">   
+                        <!-- <div class="form-group col-12">   
                             <input type="text" class="form-control" id="subject" name="subject" placeholder="Website url"> 
-                        </div>  
+                        </div>   -->
                         <div class="form-group col-12">
                             <textarea class="form-control" id="message" name="message" placeholder="Type your message"></textarea>
                         </div>
