--- a/Household.html
+++ b/Household.html
@@ -29,6 +29,9 @@
             .fetures p{
                 font-size: 1rem;
             }
+            .fix p{
+                line-height: 24px;
+            }
         }
     </style>
 
@@ -171,7 +174,7 @@
                 <p class="House">At GSC, we are committed to providing households with high-performance cleaning solutions that combine effectiveness with safety. Our household detergent range is designed to tackle everyday cleaning challenges, from dishwashing and surface disinfection to glass and hand cleaning. Each product is formulated with quality ingredients to ensure powerful results while being gentle on the surfaces and safe for your family.</p>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6 Nove product wow fadeIn" data-wow-delay="0.3s">
+                <div class="col-lg-4 col-md-6 Nove product wow fix fadeIn" data-wow-delay="0.3s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants8.jpg" alt="">
@@ -183,7 +186,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 Handy Liquid product wow fadeIn" data-wow-delay="0.6s">
+                <div class="col-lg-4 col-md-6 Handy Liquid product fix wow fadeIn" data-wow-delay="0.6s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants7.jpg" alt="">
@@ -195,7 +198,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 glanso product wow fadeIn" data-wow-delay="0.9s">
+                <div class="col-lg-4 col-md-6 glanso product wow fix fadeIn" data-wow-delay="0.9s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants3.jpg" alt="">
@@ -207,7 +210,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 tornado product wow fadeIn">
+                <div class="col-lg-4 col-md-6 tornado product wow fix fadeIn">
                     <div class="factories">
                         <div class="factories_img pb-5 ">
                             <img class="w-100" src="images/3.jpg" alt="">
@@ -219,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 Glob product wow fadeIn" data-wow-delay="1.1s"> 
+                <div class="col-lg-4 col-md-6 Glob product wow fix fadeIn" data-wow-delay="1.1s"> 
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants1.jpg" alt="">
@@ -231,7 +234,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 Gloptol product wow fadeIn" data-wow-delay="1.1s">
+                <div class="col-lg-4 col-md-6 Gloptol product wow fix fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants4.jpg" alt="">
