--- a/Household.html
+++ b/Household.html
@@ -32,7 +32,15 @@
             .fix p{
                 line-height: 24px;
             }
+            .fetures_area .fetures .heding {
+  font: 700 24px/30px "Muli", sans-serif;
+  color: #272727;
+  display: block;
+  padding: 20px 0 0;
+}
+
         }
+        
     </style>
 
     <!-- Header Top Area -->
