--- a/Household.html
+++ b/Household.html
@@ -30,13 +30,13 @@
                 font-size: 1rem;
             }
             .fix p{
-                line-height: 24px;
+                line-height: 20px;
             }
             .fetures_area .fetures .heding {
   font: 700 24px/30px "Muli", sans-serif;
   color: #272727;
   display: block;
-  padding: 20px 0 0;
+  padding: 0px 0 0 0px;
 }
 
         }
