--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
                     <b>Email:</b>
                     info@globalchem-eg.com 
                     <b>(+20)223426311</b>
-                    <b>(+20)1018013104</b>
+                    <b class="pt-0">(+20)1018013104</b>
                     Time : Sunday-Thursday 09am-5pm
                     <b>Address</b>
                     4 El Frados Complex, Nasr City, Cairo, Egypt.
