--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
                     info@globalchem-eg.com 
                     <b>(+20)223426311</b>
                     <b class="pt-0">(+20)1018013104</b>
-                    Time : Sunday-Thursday 09am-5pm
+                    Time : Sunday-Thursday 09am-4pm
                     <b>Address</b>
                     4 El Frados Complex, Nasr City, Cairo, Egypt.
                 </address>
@@ -184,7 +184,7 @@
                 <div class="col-lg-4 mail_info wow fadeInLeft">
                     <a href="#"><i class="flaticon-mail"></i>info@globalchem-eg.com</a>
                 </div> 
-                <a href="#" class="col-lg-4 contact_no">(+20)223426311</a> 
+                    <a href="#" class="contact_no  col-lg-4">(+20)223426311 & (+20)1018013104</a> 
                 <div class="col-lg-4 location_info wow fadeInRight"> 
                     <h4><i class="flaticon-placeholder"></i>4 El Frados Complex, Nasr City, Cairo, Egypt.</h4>
                 </div>
