--- a/index.html
+++ b/index.html
@@ -344,10 +344,14 @@
                <div class="welcome_content"> 
                     <h2>Welcome to Global Specialty Chemicals – Leading Industrial Chemical Solutions</h2>
                     <p class="pt-3">Manufacturing has come a long way in just a few short years. We're helping businesses evolve and thrive in a changing world, where disruptive technologies and talent challenges are taking centre stage. Our industrial company delivers products and services to many countries of the globe, Our industrial company has been fulfilling public projects for decades, </p>
-                    <h4><i class="flaticon-factory"></i>OUR FOCUS</h4>
+                    <h4><i class="flaticon-factory"></i>OUR VISION</h4>
                     <p class="factory_p pb-2">At Global Specialty Chemicals, we’re proud to support businesses with products that enhance operational efficiency and safety. We serve industries across Egypt and beyond, ensuring reliability and quality in every solution we provide.</p>
                     <h4><i class="flaticon-factory"></i>OUR MISSION</h4>
                     <p class="factory_p">We create value through sustainable and cutting-edge chemical solutions that empower businesses to grow and innovate. With a focus on excellence, our mission is to drive success and support industries in achieving their goals. </p>
+                    <h4><i class="flaticon-factory"></i>OUR VALUES</h4>
+                    <p class="factory_p sub_p"><strong>Quality:</strong> We guarantee the highest standards in all our products and services.</p>
+                    <p>We understand that our customers depend on the quality and reliability of our products. That’s why we are committed to continuous research and development, ensuring that we stay at the forefront of innovation in the chemical industry. Our products are not only designed to perform but are also developed with a focus on safety and sustainability—minimizing environmental impact while maximizing efficiency. </p>
+
                </div>
             </div>
         </div>
