--- a/Household.html
+++ b/Household.html
@@ -91,6 +91,7 @@
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="http://wa.me/201014807874" target="_blank" title="whatsapp"><i class="fa-brands fa-whatsapp"></i></a></li>
                         
                     </ul>
                 </div> 
@@ -185,7 +186,7 @@
                 <div class="col-lg-4 col-md-6 Nove product wow fix fadeIn" data-wow-delay="0.3s">
                     <div class="factories">
                         <div class="factories_img pb-5">
-                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants8.jpg" alt="">
+                            <img src="images/HouseDetergents/householddetergants8.jpg" alt="">
                             <h3 class="heding">Nove Dishwashing Liquid</h3>
                         </div>
                         <div class="fetures">
@@ -197,7 +198,7 @@
                 <div class="col-lg-4 col-md-6 Handy Liquid product fix wow fadeIn" data-wow-delay="0.6s">
                     <div class="factories">
                         <div class="factories_img pb-5">
-                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants7.jpg" alt="">
+                            <img src="images/HouseDetergents/householddetergants7.jpg" alt="">
                             <h3 class="heding">Handy Liquid Hand Soap</h3>
                         </div>
                         <div class="fetures">
@@ -209,7 +210,7 @@
                 <div class="col-lg-4 col-md-6 glanso product wow fix fadeIn" data-wow-delay="0.9s">
                     <div class="factories">
                         <div class="factories_img pb-5">
-                            <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants3.jpg" alt="">
+                            <img src="images/HouseDetergents/householddetergants3.jpg" alt="">
                             <h3 href="#" class="heding">Glanso Glass & Window Cleaner</h3>
                         </div>
                         <div class="fetures">
@@ -233,7 +234,7 @@
                 <div class="col-lg-4 col-md-6 Glob product wow fix fadeIn" data-wow-delay="1.1s"> 
                     <div class="factories">
                         <div class="factories_img pb-5">
-                            <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants1.jpg" alt="">
+                            <img src="images/HouseDetergents/householddetergants1.jpg" alt="">
                             <h3  class="heding">Glob BioGel Hand Clear Disinfectant</h3>
                         </div>
                         <div class="fetures">
@@ -245,7 +246,7 @@
                 <div class="col-lg-4 col-md-6 Gloptol product wow fix fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
-                            <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants4.jpg" alt="">
+                            <img src="images/HouseDetergents/householddetergants4.jpg" alt="">
                             <h3 class="heding">Globtol Liquid Disinfectant</h3>
                         </div>
                         <div class="fetures">
@@ -258,7 +259,7 @@
                 <div class="col-lg-4 col-md-6 Madiera Oud product wow fadeIn" data-wow-delay="0.9s">
                     <div class="factories">
                         <div class="factories_img pb-5">
-                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants6.jpg" alt="">
+                            <img src="images/HouseDetergents/householddetergants6.jpg" alt="">
                             <h3 class="heding">Madiera Oud Air Freshener</h3>
                         </div>
                         <div class="fetures">
@@ -270,7 +271,7 @@
                 <div class="col-lg-4 col-md-6 Madiera Flowers  product wow fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
-                            <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants5.jpg" alt="">
+                            <img src="images/HouseDetergents/householddetergants5.jpg" alt="">
                             <h3 class="heding">Madiera Flowers Air Freshener</h3>
                         </div>
                         <div class="fetures">
@@ -282,7 +283,7 @@
                 <div class="col-lg-4 col-md-6 Acacia Peach product wow fadeIn" data-wow-delay="0.9s">
                     <div class="factories">
                         <div class="factories_img pb-5">
-                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants9.jpg" alt="">
+                            <img src="images/HouseDetergents/householddetergants9.jpg" alt="">
                             <h3 class="heding">Madiera Peach Air Freshener</h3>
                         </div>
                         <div class="fetures">
@@ -294,7 +295,7 @@
                 <div class="col-lg-4 col-md-6 Acacia Cranberry product wow fadeIn" data-wow-delay="0.9s">
                     <div class="factories">
                         <div class="factories_img pb-5">
-                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants10.jpg" alt="">
+                            <img src="images/HouseDetergents/householddetergants10.jpg" alt="">
                             <h3 class="heding">Madiera Cranberry Air Freshener</h3>
                         </div>
                         <div class="fetures">
@@ -336,7 +337,7 @@
                 <div class="col-lg-4 mail_info wow fadeInLeft">
                     <a href="#"><i class="flaticon-mail"></i>info@globalchem-eg.com</a>
                 </div> 
-                <a href="#" class="col-lg-4 contact_no">(+20)223426311</a> 
+                <a  class="contact_no col-lg-4"><a href="tel:+201018013104" class="tel d-flex justify-content-center align-items-center p-0 m-0 "> <i class="me-3 fas fa-mobile-alt"></i> 0223426311 </a><a href="tel:+20223426311" class="tel d-flex justify-content-center align-items-center p-0 m-0">  <i class="me-2 fa-solid fa-phone"></i>01018013104</a></a> 
                 <div class="col-lg-4 location_info wow fadeInRight"> 
                     <h4><i class="flaticon-placeholder"></i>4 El Frados Complex, Nasr City, Cairo, Egypt.</h4>
                 </div>
@@ -356,6 +357,7 @@
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="http://wa.me/201014807874" target="_blank" title="whatsapp"><i class="fa-brands fa-whatsapp"></i></a></li>
                         
                     </ul>
                 </div>
