--- a/about.html
+++ b/about.html
@@ -70,6 +70,8 @@
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="http://wa.me/201014807874" target="_blank" title="whatsapp"><i class="fa-brands fa-whatsapp"></i></a></li>
+
                         
                     </ul>
                 </div> 
@@ -230,7 +232,7 @@
                 <div class="col-lg-4 mail_info wow fadeInLeft">
                     <a href="#"><i class="flaticon-mail"></i>info@globalchem-eg.com</a>
                 </div> 
-                <a href="#" class="col-lg-4 contact_no">(+20)223426311</a> 
+                <a  class="contact_no col-lg-4"><span class="tel d-flex justify-content-center align-items-center p-0 m-0 "> <i class="me-3 fas fa-mobile-alt"></i></i> 0223426311 </span><span class="tel d-flex justify-content-center align-items-center p-0 m-0">  <i class="me-2 fa-solid fa-phone"></i>01018013104</span></a> 
                 <div class="col-lg-4 location_info wow fadeInRight"> 
                     <h4><i class="flaticon-placeholder"></i>4 El Frados Complex, Nasr City, Cairo, Egypt.</h4>
                 </div>
@@ -250,6 +252,8 @@
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="http://wa.me/201014807874" target="_blank" title="whatsapp"><i class="fa-brands fa-whatsapp"></i></a></li>
+
                         
                     </ul>
                 </div>
