--- a/Household.html
+++ b/Household.html
@@ -337,7 +337,10 @@
                 <div class="col-lg-4 mail_info wow fadeInLeft">
                     <a href="#"><i class="flaticon-mail"></i>info@globalchem-eg.com</a>
                 </div> 
-                <a  class="contact_no col-lg-4"><a href="tel:+201018013104" class="tel d-flex justify-content-center align-items-center p-0 m-0 "> <i class="me-3 fas fa-mobile-alt"></i> 0223426311 </a><a href="tel:+20223426311" class="tel d-flex justify-content-center align-items-center p-0 m-0">  <i class="me-2 fa-solid fa-phone"></i>01018013104</a></a> 
+                <a  class="contact_no col-lg-4">
+                    <a href="tel:+201018013104" class="d-block "> <i class="me-3 fas fa-mobile-alt"></i> 0223426311 </a> 
+                    <a href="tel:+20223426311" class="d-block">  <i class="me-2 fa-solid fa-phone"></i>01018013104</a>
+                </a> 
                 <div class="col-lg-4 location_info wow fadeInRight"> 
                     <h4><i class="flaticon-placeholder"></i>4 El Frados Complex, Nasr City, Cairo, Egypt.</h4>
                 </div>
