--- a/index.html
+++ b/index.html
@@ -74,7 +74,13 @@
                             </li>  
                             <li><a class="nav-link" href="about.html">About Us</a></li>  
                             <li><a class="nav-link" href="contact.html">Contact us</a></li>  
-                        </ul>  
+                        </ul>
+                        <ul class="header_social col-md-4 changed col-sm-6">
+                            <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="http://wa.me/201014807874" target="_blank" title="whatsapp"><i class="fa-brands fa-whatsapp"></i></a></li>
+                        </ul>
                     </div>
                 </nav> 
            </div>
@@ -506,12 +512,15 @@
                         <li><a href="Household.html">Household Detergents</a></li>   
                         <li><a href="Industrialdetergents.html">Industrial Detergents</a></li>   
                         <li><a href="Solvents.html">Solvents</a></li>   
+                    </ul>
+                </div> 
+                <div class="footer_widget fw_3 col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.9s" style="visibility: visible; animation-delay: 0.9s; animation-name: fadeIn;">
+                    <ul class="footer_nav">     
                         <li><a href="Thinners.html">Thinners </a></li>   
                         <li><a href="oilfield.html">Oilfield Chemicals</a></li>   
                         <li><a href="Customized Solutions.html">Customized Solutions</a></li>   
                     </ul>
-                </div> 
-
+                </div>
             </div>
              <!-- Copy Right -->
             <div class="copy_right row w-100 "> 
