--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                     </ul>
                 </div> 
                 <div class="footer_widget fw_3 col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.9s" style="visibility: visible; animation-delay: 0.9s; animation-name: fadeIn;">
-                    <ul class="footer_nav">     
+                    <ul class="footer_nav solo">     
                         <li><a href="Thinners.html">Thinners </a></li>   
                         <li><a href="oilfield.html">Oilfield Chemicals</a></li>   
                         <li><a href="Customized Solutions.html">Customized Solutions</a></li>   
