--- a/index.html
+++ b/index.html
@@ -490,13 +490,12 @@
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
                     <a href="index.html"><img class="w-30" src="images/GSC.png" alt=""></a> 
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
-                    <ul class="footer_social"> 
+                    <!-- <ul class="footer_social"> 
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="http://wa.me/201014807874" target="_blank" title="whatsapp"><i class="fa-brands fa-whatsapp"></i></a></li>
-                        
-                    </ul>
+                    </ul> -->
                 </div>
                 <div class="footer_widget col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                     <h4>GSC</h4>
