--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <h6 class="pt-0">info@globalchem-eg.com</h6>
                         </div>
                     </div>
-                    <ul class="header_social col-md-2 mb-3 col-sm-6">
+                    <ul class="header_social col-md-2  col-sm-6">
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
