--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
             </div>
              <!-- Copy Right -->
             <div class="copy_right row w-100 "> 
-                <p class="col text-center order-lg-first">©  2024  VERTEX</p> 
+                <p class="col text-center order-lg-first"><a href="https://vertex.com.eg/" target="_blank">©  2024  VERTEX</a> </p> 
             </div>
         </div> 
     </footer>
