--- a/Household.html
+++ b/Household.html
@@ -132,6 +132,12 @@
                             <li><a class="nav-link" href="about.html">About Us</a></li>  
                             <li><a class="nav-link" href="contact.html">Contact us</a></li>  
                         </ul>  
+                        <ul class="header_social col-md-4 changed col-sm-6">
+                            <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="http://wa.me/201014807874" target="_blank" title="whatsapp"><i class="fa-brands fa-whatsapp"></i></a></li>
+                        </ul>
                     </div>
                 </nav> 
            </div>
@@ -259,7 +265,7 @@
                 <div class="col-lg-4 col-md-6 Madiera Oud product wow fadeIn" data-wow-delay="0.9s">
                     <div class="factories">
                         <div class="factories_img pb-5">
-                            <img src="images/HouseDetergents/householddetergants6.jpg" alt="">
+                            <img src="images/OOUD.jpg" alt="">
                             <h3 class="heding">Madiera Oud Air Freshener</h3>
                         </div>
                         <div class="fetures">
@@ -271,7 +277,7 @@
                 <div class="col-lg-4 col-md-6 Madiera Flowers  product wow fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
-                            <img src="images/HouseDetergents/householddetergants5.jpg" alt="">
+                            <img src="images/flowers.jpg" alt="">
                             <h3 class="heding">Madiera Flowers Air Freshener</h3>
                         </div>
                         <div class="fetures">
@@ -283,48 +289,12 @@
                 <div class="col-lg-4 col-md-6 Acacia Peach product wow fadeIn" data-wow-delay="0.9s">
                     <div class="factories">
                         <div class="factories_img pb-5">
-                            <img src="images/HouseDetergents/householddetergants9.jpg" alt="">
+                            <img src="images/peach.jpg" alt="">
                             <h3 class="heding">Madiera Peach Air Freshener</h3>
                         </div>
                         <div class="fetures">
                             <h3 class="heding">Madiera Peach Air Freshener</h3>
                             <p>Indulge in the sweet, juicy scent of ripe peaches with Madiera Peach Air Freshener. Its fruity fragrance instantly revitalizes your surroundings, leaving behind a refreshing and invigorating scent..</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 Acacia Cranberry product wow fadeIn" data-wow-delay="0.9s">
-                    <div class="factories">
-                        <div class="factories_img pb-5">
-                            <img src="images/HouseDetergents/householddetergants10.jpg" alt="">
-                            <h3 class="heding">Madiera Cranberry Air Freshener</h3>
-                        </div>
-                        <div class="fetures">
-                            <h3 class="heding">Madiera Cranberry Air Freshener</h3>
-                            <p>Enjoy the crisp and refreshing scent of cranberries with Madiera Cranberry Air Freshener. This fruity fragrance leaves a fresh, uplifting vibe, perfect for brightening up any room in your home or office.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="1.4s">
-                    <div class="factories">
-                        <div class="factories_img pb-5">
-                            <img src="images/a.png" alt="">
-                            <h3 class="heding">Coming Soon</h3>
-                        </div>
-                        <div class="fetures">
-                            <h3 class="heding">Coming Soon</h3>
-                            <p>Coming Soon</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="1.4s">
-                    <div class="factories">
-                        <div class="factories_img pb-5">
-                            <img src="images/a.png" alt="">
-                            <h3 class="heding">Coming Soon</h3>
-                        </div>
-                        <div class="fetures">
-                            <h3 class="heding">Coming Soon</h3>
-                            <p>Coming Soon</p>
                         </div>
                     </div>
                 </div>
@@ -338,8 +308,8 @@
                     <a href="#"><i class="flaticon-mail"></i>info@globalchem-eg.com</a>
                 </div> 
                 <div  class="contact_no col-lg-4">
-                    <a href="tel:+201018013104" class="d-block text-white "> <i class="me-3 fas fa-mobile-alt"></i> 0223426311 </a> 
-                    <a href="tel:+20223426311" class="d-block text-white ">  <i class="me-2 fa-solid fa-phone"></i>01018013104</a>
+                    <a href="tel:+20223426311" class="d-block text-white "> <i class="me-2 fa-solid fa-phone"></i> 0223426311 </a> 
+                    <a href="tel:+201018013104" class="d-block text-white "><i class="me-3 fas fa-mobile-alt"></i>01018013104</a>
                 </div> 
                 <div class="col-lg-4 location_info wow fadeInRight"> 
                     <h4><i class="flaticon-placeholder"></i>4 El Frados Complex, Nasr City, Cairo, Egypt.</h4>
@@ -353,16 +323,15 @@
     <footer class="footer_area">
         <div class="container"> 
             <div class="footer_inner row"> 
-                <div class="col-lg-4 col-md-6 product footer_logo wow fadeIn">
+                <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
                     <a href="index.html"><img class="w-30" src="images/GSC.png" alt=""></a> 
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
-                    <ul class="footer_social"> 
+                    <!-- <ul class="footer_social"> 
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="http://wa.me/201014807874" target="_blank" title="whatsapp"><i class="fa-brands fa-whatsapp"></i></a></li>
-                        
-                    </ul>
+                    </ul> -->
                 </div>
                 <div class="footer_widget col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                     <h4>GSC</h4>
@@ -372,24 +341,31 @@
                         <li><a href="contact.html">Contact us</a></li> 
                     </ul>
                 </div>  
-                <div class="footer_widget fw_2 col-lg-2 col-sm-6 wow fadeIn" data-wow-delay="0.6s">
+                <div class="footer_widget fw_2 col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.6s">
                     <h4>Products</h4> 
-                    <ul class="footer_nav"> 
+                    <ul class="footer_nav">
                         <li><a href="Household.html">Household Detergents</a></li>   
                         <li><a href="Industrialdetergents.html">Industrial Detergents</a></li>   
-                        <li><a href="industries.html">Solvents</a></li>   
-                        <li><a href="Thinners.html">Thinners </a></li>   
-                        <li><a href="oilfield.html">Oilfield Chemicals</a></li>   
                         <li><a href="Customized Solutions.html">Customized Solutions</a></li>   
                     </ul>
                 </div> 
+                <div class="footer_widget fw_3 col-lg-2 col-md-6 wow fadeIn" data-wow-delay="0.9s" style="visibility: visible; animation-delay: 0.9s; animation-name: fadeIn;">
+                    <ul class="footer_nav solo">     
+                        <li><a href="Thinners.html">Thinners </a></li>   
+                        <li><a href="oilfield.html">Oilfield Chemicals</a></li>   
+                        <li><a href="Solvents.html">Solvents</a></li>   
+                    </ul>
+                </div>
+
+
             </div>
              <!-- Copy Right -->
              <div class="copy_right row w-100 "> 
-                <p class="col text-center order-lg-first">©  2024  VERTEX</p> 
+                <p class="col text-center order-lg-first"><a href="https://vertex.com.eg/" target="_blank">©  2024  VERTEX</a> </p> 
             </div>
         </div> 
     </footer>
+
     <!-- End Footer Area -->  
     
     <!-- Scroll Top Button -->
