--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="header_logo_inner row">
                 <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img class="w-43" src="images/GSC.png" alt=""></a></div>
                 <div class="right_info col-lg-9 row"> 
-                    <div class="media col-md-6 col-sm-6 align-items-center">
+                    <div class="media col-md-4 col-sm-6 align-items-center">
                         <i class="flaticon-placeholder"></i>
-                        <div class="media-body pt-0">
-                            <h6 class="pt-0"> 4 El Frados Complex, Nasr City, Cairo, Egypt.</h6>
+                        <div class="media-body">
+                            <h6> 4 El Frados Complex, Nasr City, Cairo, Egypt.</h6>
                         </div>
                     </div>
                     <div class="media col-md-4 col-sm-6 align-items-center">
@@ -33,7 +33,7 @@
                             <h6 class="pt-0">info@globalchem-eg.com</h6>
                         </div>
                     </div>
-                    <ul class="header_social col-md-2  col-sm-6">
+                    <ul class="header_social col-md-4  col-sm-6">
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
@@ -74,13 +74,14 @@
                             </li>  
                             <li><a class="nav-link" href="about.html">About Us</a></li>  
                             <li><a class="nav-link" href="contact.html">Contact us</a></li>  
-                        </ul>
+                        </ul>  
                         <ul class="header_social col-md-4 changed col-sm-6">
                             <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://www.linkedin.com/in/gsc-egy-3251b6338/" target="_blank" title="linkedin Page"><i class="fa fa-linkedin"></i></a></li>
                             <li><a href="https://www.instagram.com/gscegy/"target="_blank" title="instagram Page"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="http://wa.me/201014807874" target="_blank" title="whatsapp"><i class="fa-brands fa-whatsapp"></i></a></li>
                         </ul>
+
                     </div>
                 </nav> 
            </div>
@@ -520,9 +521,11 @@
                         <li><a href="Solvents.html">Solvents</a></li>   
                     </ul>
                 </div>
+
+
             </div>
              <!-- Copy Right -->
-            <div class="copy_right row w-100 "> 
+             <div class="copy_right row w-100 "> 
                 <p class="col text-center order-lg-first"><a href="https://vertex.com.eg/" target="_blank">©  2024  VERTEX</a> </p> 
             </div>
         </div> 
