--- a/Household.html
+++ b/Household.html
@@ -22,6 +22,22 @@
 </head>
 <body> 
     <style>
+
+        @media(min-width:1200px){
+            .features h3{
+                font-size: 1rem;
+            }
+            .fetures p{
+                font-size: 1rem;
+            }
+            .fetures_area .fetures .heding {
+  font: 700 24px/30px "Muli", sans-serif;
+  color: #272727;
+  display: block;
+  padding: 0px 0 0 0px;
+}
+
+        }
         @media(max-width:900px){
             .features h3{
                 font-size: 1rem;
