--- a/Household.html
+++ b/Household.html
@@ -250,7 +250,7 @@
                             <h3  class="heding  mt-5">Tornado Toilet Cleaner</h3>
                         </div>
                         <div class="fetures">
-                            <a class="heding">Tornado Toilet Cleaner</a>
+                            <h3 class="heding">Tornado Toilet Cleaner</h3>
                             <p>Tornado is a powerful, highly active toilet cleaner designed to eliminate tough stains, germs, and odors, leaving your toilet sparkling clean and fresh. Its advanced formula effectively removes limescale and hard water deposits, ensuring long-lasting hygiene and protection. Ideal for regular use to maintain a pristine and germ-free bathroom.</p>
                         </div>
                     </div>
