--- a/contact.html
+++ b/contact.html
@@ -136,10 +136,12 @@
      
     <!-- Map Area -->   
     <section class="map_area row"> 
-        <div  class="col-lg-7" >
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.3261056491633!2d31.30130999999999!3d30.0561856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583fbe06bff28f%3A0x5712db8650f1e7fe!2z2KzZhNmI2KjYp9mEINmE2YTZg9mK2YXYp9mI2YrYp9iqINin2YTZhdiq2K7Ytdi12Yc!5e0!3m2!1sen!2seg!4v1729987393380!5m2!1sen!2seg" width="100%" height="530" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div  class="col-lg-7 d-flex justify-content-end align-items-center pe-0 " >
+            <div class="parentframe w-90 d-flex justify-content-end align-items-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.3261056491633!2d31.30130999999999!3d30.0561856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583fbe06bff28f%3A0x5712db8650f1e7fe!2z2KzZhNmI2KjYp9mEINmE2YTZg9mK2YXYp9mI2YrYp9iqINin2YTZhdiq2K7Ytdi12Yc!5e0!3m2!1sen!2seg!4v1729987393380!5m2!1sen!2seg" width="100%" height="530" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div> 
-        <div class="col-lg-5">
+        <div class="col-lg-5 ps-0">
             <div class="easy_contact">
                 <h3>Easy Contact</h3>
                 <address>
